# llamastash

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  INSTALL.md  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  VP_VULKANINFO_AMD_Radeon_AI_PRO_R9700_(RADV_GFX1201)_26_0_6.json  config.example.yaml
.cargo-husky/hooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  macos-build-nightly.yml  publish-cargo-manual.yml  publish-homebrew-manual.yml  regenerate-benchmark-snapshot.yml  release.yml  uat-cpu-only-nightly.yml  uat-metal-nightly.yml
assets/: demo.cast
benches/: proxy_overhead.rs
data/: benchmark-snapshot.json
deployment/homebrew/: packager.py
deployment/scoop/: llamastash.json  llamastash.json.template  packager.py  packager_test.py
docs/: architecture.md  benchmarks.md  lemonade-setup.md  troubleshooting.md  usage.md
docs/benchmarks/: index.md  linux-amd-apu-final-report.md  macos-m1-final-report.md  methodology.md  r1-amd-apu-final-report.md  results-2026-05-23.md  results-2026-05-23.preamble.md  results-2026-05-24.md  results-2026-05-24.preamble.md
docs/brainstorms/: 2026-05-19-release-setup-requirements.md  2026-05-19-uat-e2e-hardware-strategy-requirements.md  2026-05-20-hf-pull-tui-dialog-requirements.md  2026-05-21-benchmark-harness-requirements.md  2026-06-08-multi-backend-abstraction-requirements.md  2026-06-12-auto-fit-and-hardware-truth-requirements.md
docs/plans/: 2026-05-13-001-feat-llamatui-v1-launcher-plan.md  2026-05-16-001-feat-kdash-style-dashboard-ui-plan.md  2026-05-18-001-feat-init-wizard-doctor-pull-plan.md  2026-05-19-001-feat-vendor-benchmark-scrapers-plan.md  2026-05-19-002-feat-uat-e2e-hardware-strategy-plan.md  2026-05-19-003-feat-0.2.0-release-setup-plan.md  2026-05-20-001-feat-live-hf-snapshot-discovery-plan.md  2026-05-20-002-feat-hf-pull-tui-dialog-plan.md  2026-05-20-003-feat-arch-defaults-typed-editor-plan.md  2026-05-21-001-feat-benchmark-harness-plan.md  2026-05-29-001-feat-windows-support-and-http-ipc-plan.md  2026-06-05-001-feat-device-selection-plan.md  2026-06-08-001-refactor-backend-trait-abstraction-plan.md  2026-06-10-001-feat-lemonade-backend-reintegration-plan.md  2026-06-13-001-feat-auto-fit-launch-mode-and-hardware-truth-plan.md  2026-06-15-001-feat-proxy-ui-surface-plan.md  2026-06-20-001-refactor-codebase-audit-improvements-plan.md
docs/reviews/: review-2026-05-24.md
docs/runbooks/: release-0.0.1-bootstrap.md  release-0.0.1-checklist.md  verify-uat-reintroduction.md
docs/testing/: 2026-05-17-render-issues.md  2026-05-17-render-test-plan.md  2026-05-30-e2e-uat-plan.md  2026-06-01-e2e-uat-run-macos.md  coverage.md  hardware-uat.md
scripts/: audit_summary.py  install.ps1  install.sh  regenerate-benchmark-snapshot.py  requirements.txt  tui_drive.py
scripts/benchmark_sources/: README.md  aider.py  open_llm_leaderboard.py  whichllm.py
scripts/tui/: README.md  demo.prog  drive_init_search.py  example.prog  harness.py  presets.prog  seed_demo_models.py  trim_cast.py  tui_drive.py
skills/llamastash/: SKILL.md
src/: lib.rs  main.rs
src/backend/: identity.rs  llama_cpp.rs  mod.rs
src/cli/: cli_args.rs  client.rs  colors.rs  daemon.rs  exit_codes.rs  favorites.rs  init.rs  knob_flags.rs  last_params.rs  list.rs  logs.rs  mod.rs  output.rs  presets.rs  pull.rs  resolve.rs  show.rs  start.rs  status.rs  stop.rs  tail_args.rs
src/config/: loader.rs  mod.rs  presets_writer.rs  writer.rs  yaml_edit.rs
src/daemon/: actuals.rs  auth.rs  control_plane.rs  discovery_task.rs  host_metrics.rs  launch_service.rs  lockfile.rs  mod.rs  orphans.rs  peercred.rs  preset_migration.rs  probe.rs  registry.rs  resources.rs  server.rs  shutdown.rs  state_store.rs  supervisor.rs
src/discovery/: catalog.rs  known_caches.rs  lemonade.rs  lm_studio.rs  metadata_cache.rs  mod.rs  ollama.rs  scanner.rs  split_gguf.rs  watcher.rs
src/gguf/: errors.rs  header.rs  identity.rs  memory.rs  metadata.rs  mod.rs  test_fixtures.rs
src/gpu/: amd.rs  dxgi.rs  metal.rs  mod.rs  nvidia.rs  sysfs.rs  vulkan.rs
src/init/: benchmark.rs  config_writer.rs  detection.rs  doctor.rs  download.rs  fetch.rs  fetch_policy.rs  hf_api.rs  mod.rs  prompts.rs  recommender.rs  smoke.rs  snapshot.rs  wizard.rs
src/ipc/: client.rs  framing.rs  methods.rs  mod.rs  protocol.rs  status.rs
src/launch/: admission.rs  binary.rs  ctx_fit.rs  defaults_table.rs  favorites.rs  flag_aliases.rs  headroom.rs  mod.rs  mode.rs  params.rs  presets.rs  resolve.rs
src/proxy/: auth.rs  coalesce.rs  eviction.rs  failure_tracker.rs  forward.rs  launch.rs  mod.rs  mru.rs  ollama_compat.rs  openai.rs  route.rs  router.rs  server.rs  state.rs  ui.rs
src/theme/: mod.rs  palette.rs
src/tui/: advanced_panel.rs  app.rs  confirm_overlay.rs  download_strip.rs  events.rs  filter.rs  fmt.rs  help_bar.rs  help_overlay.rs  hf_dialog.rs  hf_pull.rs  hint_picker.rs  host_stats_pane.rs  info_pane.rs  input_field.rs  keybindings.rs  launch_picker.rs  list_pane.rs  logo_pane.rs  mod.rs  oai_client.rs  (+4 more)
tests/: cli_init_parse.rs  cli_integration_test.rs  control_plane_handshake_test.rs  daemon_config_integration_test.rs  daemon_lifecycle_test.rs  discovery_scan_test.rs  gguf_parse_test.rs  init_orchestration.rs  init_snapshot_persistence.rs  ipc_handshake_test.rs  known_caches_test.rs  lemonade_route_test.rs  lemonade_umbrella_test.rs  list_models_test.rs  proxy_autostart.rs  proxy_coalesce.rs  proxy_eviction.rs  proxy_fallback.rs  proxy_listener_test.rs  proxy_manual_test_plan.md  proxy_models.rs  proxy_ollama_compat.rs  proxy_real_client_smoke.md  proxy_routing.rs  proxy_ui.rs  recommender_corpus.rs  split_gguf_test.rs  start_model_ipc_test.rs  supervisor_ipc_test.rs  supervisor_lifecycle_test.rs  tui_chat_smoke_test.rs  tui_e2e_render_test.rs  tui_smoke_test.rs
(+73 files in other folders)
