[package]
name = "llamatui"
version = "0.1.0-dev"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = "A fast, keyboard-driven TUI for launching local llama.cpp models"
documentation = "https://github.com/llamatui/llamatui"
keywords = ["llamatui", "llama-cpp", "llm", "tui", "gguf"]
repository = "https://github.com/llamatui/llamatui"
homepage = "https://github.com/llamatui/llamatui"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.80"
exclude = [
  "test_data/*",
  "deployment/*",
  "artwork/*",
  ".github",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

[dependencies]
anyhow = "1.0"
# `wayland-data-control` activates arboard's native Wayland backend
# alongside the default X11/XWayland one. Both ship together so a
# single binary works across compositors without recompilation.
arboard = { version = "3", default-features = false, features = [
  "wayland-data-control",
] }
blake3 = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", default-features = false, features = [
  "help",
  "usage",
  "error-context",
  "derive",
  "std",
] }
crossterm = "0.29"
directories = "6"
ignore = "0.4"
libc = "0.2"
log = "0.4"
notify-debouncer-mini = { version = "0.6", default-features = false }
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { version = "0.32", default-features = false, features = [
  "system",
] }
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
which = "8"

[lib]
name = "llamatui"
path = "src/lib.rs"

[[bin]]
name = "llamatui"
path = "src/main.rs"
bench = false

# Test-only fake `llama-server` exposed under a feature flag so it
# never ships in `cargo install`-built artefacts. Integration tests
# spawn this via `CARGO_BIN_EXE_fake_llama_server`.
[[bin]]
name = "fake_llama_server"
path = "tests/fixtures/fake_llama_server.rs"
required-features = ["test-fixtures"]
bench = false
test = false
doc = false

[features]
test-fixtures = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
