[package]
name = "llamadash"
version = "0.1.0-dev"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = "A fast, keyboard-driven TUI for launching local llama.cpp models"
documentation = "https://github.com/llamadash/llamadash"
keywords = ["llamadash", "llama-cpp", "llm", "tui", "gguf"]
repository = "https://github.com/llamadash/llamadash"
homepage = "https://github.com/llamadash/llamadash"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.80"
# `cargo run` (without --bin) targets the real binary. The other
# `[[bin]]` entry (fake_llama_server) is only built for tests
# under the `test-fixtures` feature, but cargo's run-target picker
# checks the manifest before feature resolution, so we still need
# this hint.
default-run = "llamadash"
exclude = [
  "test_data/*",
  "deployment/*",
  "artwork/*",
  ".github",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]

[dependencies]
anyhow = "1.0"
# `wayland-data-control` activates arboard's native Wayland backend
# alongside the default X11/XWayland one. Both ship together so a
# single binary works across compositors without recompilation.
arboard = { version = "3", default-features = false, features = [
  "wayland-data-control",
] }
blake3 = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.6", default-features = false, features = [
  "help",
  "usage",
  "error-context",
  "derive",
  "std",
] }
crossterm = "0.29"
directories = "6"
# Streaming bytes for the right-pane chat tab (Unit 7) without
# pulling in tokio-stream's full surface.
futures = { version = "0.3", default-features = false, features = ["std"] }
ignore = "0.4"
libc = "0.2"
log = "0.4"
notify-debouncer-mini = { version = "0.6", default-features = false }
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
] }
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
] }
# Right-pane smoke-test client (Unit 7). `rustls-tls` keeps the
# build hermetic for the loopback-only v1 surface.
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { version = "0.32", default-features = false, features = [
  "system",
] }
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
which = "8"

[lib]
name = "llamadash"
path = "src/lib.rs"

[[bin]]
name = "llamadash"
path = "src/main.rs"
bench = false

# Test-only fake `llama-server` exposed under a feature flag so it
# never ships in `cargo install`-built artefacts. Integration tests
# spawn this via `CARGO_BIN_EXE_fake_llama_server`.
[[bin]]
name = "fake_llama_server"
path = "tests/fixtures/fake_llama_server.rs"
required-features = ["test-fixtures"]
bench = false
test = false
doc = false

[features]
test-fixtures = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
